01/05 F Improved query generation in sql_do_addusers              [ #00]
01/05 F Use strlcpy/strlcat instead of strcpy/strcat              [ #00]
01/05 F Make P10 send EA only when EOB comes from uplink server   [ #00]
01/05 U Updated Dutch language file                               [ #00]
12/04 F Fixed P10 ircds not parting channels                      [ #00]


Denora Version 1.1.0
-------------------
Provided by Nomad Dev. <dev@denorastats.org> - 2005
07/25 A pseudo clients op themselves when joining a channel.      [#118]
07/23 A Added support for Unreal SVS2MODE.                        [ #00]
07/22 A Added xml_moduleData() to write out module data to xml    [ #00]
07/22 A XML API is not externed so module coders can user it      [ #00]
07/16 A Added feature to clear inactive channels after given time [#109]
07/10 A Added Beware 1.5.x IRCD support.                          [ #00]
07/10 A Added Channel and Server Stats to hourly.                 [#104]
07/06 A Added MusIRCD 2.0x support.                               [ #00]
07/05 A Added Server opers/maxoper/max oper time to sql           [ #00]
07/04 A StatServ is now modularized.                              [ #00]
07/03 A Added Hyperion IRCD (formly DancerIRCD) support.          [ #00]
07/02 A Completed work with "make strict" it now very strict      [ #00]
07/02 A Added support for P10 ircds NICKIP.                       [ #00]
07/02 A Added DreamForge IRCD support.                            [ #00]
07/01 A Added NeoIRCD Support.                                    [ #00]
06/29 A Added LiquidIRCD support.                                 [ #00]
06/29 A Added -protocoldebug switch to debug protocols better     [ #00]
06/28 A Added -ggdb switch to the builds to help GDB debugger     [ #00]
06/26 A Added support for IrcDreams IRCD.                         [ #00]
06/26 A Default HTML Template is completely translated            [ #86]
06/26 A Added the config option to backup the FFF files.          [ #82]